fixed aboutPage overflow

--- a/src/webshop/aperta-shop/src/components/About/styles.css
+++ b/src/webshop/aperta-shop/src/components/About/styles.css
@@ -10,7 +10,7 @@ main {
 .aboutAPERTA-title, .bottom-title-text {
     font-size: 1.5rem;
     font-weight: 600;
-    margin-top: 5vh;
+    margin-top: 3vh;
     text-align: center;
 }
 
@@ -20,10 +20,11 @@ main {
 
 .about-hr {
     width: 100%;
-    color: lightgray;
-    margin-top: 5vh;
+    background-color: #D9D7D7;
+    margin-top: 3vh;
     margin-left: 0;
     margin-right: 0;
+    opacity: 0.8;
 }
 
 .about-desc {
